package TestResource;

message ResourceContainerDesc
{
    required string Name = 1;
    repeated string Resources = 2;
}

message ResourceFoo
{
    required uint32 x = 1;
}

message PhysComponent
{
    required float Mass = 1;
    required float InertiaTensorX = 2;
    required float InertiaTensorY = 3;
    required float InertiaTensorZ = 4;
}

message AResource
{
    required uint32 A = 1;
}

message BResource
{
    required uint32 B = 1;
}

message CResource
{
    required uint32 C = 1;
}
